feat: add console

--- a/overlay-usb.conf
+++ b/overlay-usb.conf
@@ -3,3 +3,9 @@ CONFIG_USB_DEVICE_PRODUCT="Zephyr USB shell sample"
 CONFIG_SHELL_BACKEND_SERIAL_CHECK_DTR=y
 CONFIG_UART_LINE_CTRL=y
 CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=51
+
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+# CONFIG_LOG_BACKEND_UART=y
+# CONFIG_SHELL_LOG_BACKEND=n
+# CONFIG_UART_INTERRUPT_DRIVEN=y
