--- a/prj_minimal.conf
+++ b/prj_minimal.conf
@@ -8,5 +8,8 @@ CONFIG_THREAD_MONITOR=y
 CONFIG_INIT_STACKS=y
 CONFIG_BOOT_BANNER=n
 CONFIG_THREAD_NAME=y
-CONFIG_LOG=n
+CONFIG_LOG=y
+CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_CBPRINTF_NANO=y
+
+CONFIG_STDOUT_CONSOLE=y
